[package]
name = "linear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.12"
futures = "0.3"
tokio = { version = "1.36.0", features = ["full"] }
syn = "2.0"
quote = "1.0"
reqwest = "0.11.26"
serde_json = "1.0.114"
poise = "0.6.1"
pwhash = "1"
chrono = "0.4.35"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]


